Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.11.0
-
ghx-label-6
Description
We've seen 3 instances of failed GVOs with the same errors:
https://jenkins.impala.io/job/ubuntu-16.04-from-scratch/353/consoleFull
https://jenkins.impala.io/job/ubuntu-16.04-from-scratch/346/consoleFull
https://jenkins.impala.io/job/ubuntu-16.04-from-scratch/361/consoleFull
03:40:20 [gw14] FAILED query_test/test_udfs.py::TestUdfExecution::test_java_udfs[exec_option: {'disable_codegen_rows_threshold': 0, 'disable_codegen': True, 'exec_single_node_rows_threshold': 100, 'enable_expr_rewrites': True} | table_format: text/none] 03:40:22 [gw8] FAILED query_test/test_udfs.py::TestUdfExecution::test_java_udfs[exec_option: {'disable_codegen_rows_threshold': 0, 'disable_codegen': True, 'exec_single_node_rows_threshold': 0, 'enable_expr_rewrites': False} | table_format: text/none] 03:40:26 [gw1] FAILED query_test/test_udfs.py::TestUdfExecution::test_native_functions[exec_option: {'disable_codegen_rows_threshold': 0, 'disable_codegen': True, 'exec_single_node_rows_threshold': 0, 'enable_expr_rewrites': True} | table_format: text/none] 03:40:26 [gw9] FAILED query_test/test_nested_types.py::TestNestedTypes::test_tpch[exec_option: {'batch_size': 0, 'num_nodes': 0, 'disable_codegen_rows_threshold': 0, 'disable_codegen': False, 'abort_on_error': 1, 'exec_single_node_rows_threshold': 0} | table_format: parquet/none] 03:40:26 query_test/test_nested_types.py::TestNestedTypes::test_parquet_stats[exec_option: {'batch_size': 0, 'num_nodes': 0, 'disable_codegen_rows_threshold': 0, 'disable_codegen': False, 'abort_on_error': 1, 'exec_single_node_rows_threshold': 0} | table_format: parquet/none] 03:40:26 [gw7] FAILED query_test/test_scanners.py::TestScannersAllTableFormatsWithLimit::test_limit[exec_option: {'batch_size': 0, 'num_nodes': 0, 'disable_codegen_rows_threshold': 0, 'disable_codegen': False, 'abort_on_error': 1, 'exec_single_node_rows_threshold': 0} | table_format: parquet/none] 03:40:26 query_test/test_scanners.py::TestScannersAllTableFormatsWithLimit::test_limit[exec_option: {'batch_size': 0, 'num_nodes': 0, 'disable_codegen_rows_threshold': 0, 'disable_codegen': False, 'abort_on_error': 1, 'exec_single_node_rows_threshold': 0} | table_format: avro/snap/block] 03:40:26 [gw0] FAILED query_test/test_spilling.py::TestSpillingDebugActionDimensions::test_spilling[exec_option: {'debug_action': '-1:OPEN:SET_DENY_RESERVATION_PROBABILITY@1.0', 'default_spillable_buffer_size': '256k'} | table_format: parquet/none] ....
(More useful logs in the links above, too large to paste)
It seems to be flaky as it doesn't seem to show up every time.